# anchor-research

./: .dockerignore  .gitignore  Dockerfile.nodejs  Dockerfile.nodejs.dev  Dockerfile.python  Makefile  README.md  download_sec_data.py  main.py  pyproject.toml  run_agent.py
agents/stock_analysis/: agent.py  citations.py  prompts.py  tools.py
agents/stock_analysis/source_structure/: 10k_items.md  10q_items.md
anchor_backend/: pyproject.toml  run_agent.py
anchor_backend/agents/: __init__.py
anchor_backend/agents/stock_analysis/: __init__.py  agent.py  citations.py  context_manager.py  server.py  tools.py
anchor_backend/sources/: firebase_storage.py
anchor_backend/sources/sec_edgar/: cli.py  downloader.py  processor.py
anchor_backend/tests/: __init__.py
anchor_backend/tests/data_retrieval/: __init__.py
anchor_backend/tests/sources/: __init__.py
anchor_web/: package-lock.json  package.json
anchor_web/src/app/: globals.css  layout.tsx  page.tsx
anchor_web/src/components/: Chat.tsx  Navbar.tsx  Providers.tsx
data_retrieval/: __init__.py
data_retrieval/sec_filings/: __init__.py  downloader.py  models.py  processor.py
k8s/: README.md
k8s/dev/: web-app-configmap.yaml  web-app-deployment.dev.yaml
k8s/prod/: stock-analysis-agent-configmap.yaml  stock-analysis-agent-deployment.yaml  web-app-configmap.yaml  web-app-deployment.yaml
sec_document_parsing/: __init__.py  models.py
sources/: __init__.py
sources/sec_edgar/: __init__.py  downloader.py  processor.py
tests/: __init__.py
tests/data_retrieval/: __init__.py
(+5079 files in other folders)
